--- a/full-stack.html
+++ b/full-stack.html
@@ -39,7 +39,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://healthmetrix.join.com/jobs/260170-senior-fullstack-software-engineer-f-m-x'>Job @ Healthmetrix (Berlin): Senior Fullstack Soft... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/loandepot/job/oCKAafwQ'>loanDepot Careers - Sr. Software Engineer - Fullstack</a></h5> 
@@ -72,7 +72,7 @@
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sevenrooms/jobs/4007101002'>Job Application for Fullstack Software Engineer at SevenRooms</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sevenrooms/jobs/4007101002'>Job Application for Fullstack Software Engineer at SevenRooms</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -92,7 +92,7 @@
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692406163-full-stack-software-engineer'>4Catalyzer Full-Stack Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692406163-full-stack-software-engineer'>4Catalyzer Full-Stack Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -130,7 +130,7 @@ have?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://h2oai.applytojob.com/apply/Tvc2kxQVQ7/Full-Stack-Senior-Software-Engineer'>Full Stack Senior Software Engineer - h2o.ai - Career Page</a></h5> 
+<h5><a href='http://h2oai.applytojob.com/apply/Tvc2kxQVQ7/Full-Stack-Senior-Software-Engineer'>Full Stack Senior Software Engineer - h2o.ai - Career Page</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -148,7 +148,7 @@ Member Companies.</p>
 <p>5 days ago ... Apply online for the job of AAS3780-0 - Fullstack Software Developer, The Hague 
 - Mon 22nd July at EMW, Inc.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://the-idea-people.workable.com/jobs/1082436'>Senior Full-Stack Python Django Developer ... - The Idea People - Jobs</a></h5> 
+<h5><a href='https://the-idea-people.workable.com/jobs/1082436'>Senior Full-Stack Python Django Developer ... - The Idea People - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 19, 2019 ... Apply online for the job of Senior Full-Stack Python Django Developer at The 
 Idea People.</p>
@@ -161,11 +161,11 @@ Idea People.</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://hfarm.applytojob.com/apply/sMATwC5scH/Junior-FullStack-Developer'>Junior Full-Stack Developer - H-FARM S.p.A - Career Page</a></h5> 
+<h5><a href='http://hfarm.applytojob.com/apply/sMATwC5scH/Junior-FullStack-Developer'>Junior Full-Stack Developer - H-FARM S.p.A - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://hfarm.applytojob.com/apply/wPiCFvimUH/Junior-FullStack-Developer'>Junior Full-Stack Developer - H-FARM S.p.A - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://hfarm.applytojob.com/apply/wPiCFvimUH/Junior-FullStack-Developer'>Junior Full-Stack Developer - H-FARM S.p.A - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -193,7 +193,7 @@ Idea People.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CaziSoft/743999692409229-sr-full-stack-software-engineer'>CaziSoft Sr. Full Stack Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CaziSoft/743999692409229-sr-full-stack-software-engineer'>CaziSoft Sr. Full Stack Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -214,7 +214,7 @@ Apply Now. What you will do: Be a part of our development team and actively?...<
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Senior Full Stack Engineer at Ontruck.</p>
 <hr/>
-<h5><a href='https://ratesetter.workable.com/j/A219608FCA?viewed=true'>RateSetter - Jobs: Senior Software Engineer (Full Stack) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ratesetter.workable.com/j/A219608FCA?viewed=true'>RateSetter - Jobs: Senior Software Engineer (Full Stack) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Senior Software Engineer (Full Stack) at RateSetter.</p>
 <hr/>
@@ -350,7 +350,7 @@ Platform?...</p>
 <p>Jul 17, 2019 ... Research, architect and implement responsive, reusable, customizable next 
 generation web and mobile components and interfaces. Design and build a?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vinterior.workable.com/j/AC72F594CD'>Vinterior - Jobs: Senior Full Stack Developer - Apply online</a></h5> 
+<h5><a href='https://vinterior.workable.com/j/AC72F594CD'>Vinterior - Jobs: Senior Full Stack Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
